Fix: footer overlapping card

--- a/style.css
+++ b/style.css
@@ -19,14 +19,14 @@
 
 /* Default styles */
 body {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  height: 100vh;
-  width: 100vw;
   margin: 0;
   font: var(--font-size) var(--font-family);
   background: var(--color-light-gray);
+}
+
+main {
+  height: 100vh;
+  width: 100vw;
 }
 
 /* Class styles */
